--- a/iFit/enlaces.html
+++ b/iFit/enlaces.html
@@ -18,18 +18,18 @@
             <div class="box">
                 <div class="row row-offcanvas row-offcanvas-left">   
 
-                    <!-- sidebar -->
+                     <!-- sidebar -->
                     <div class="column col-sm-2 col-xs-1 sidebar-offcanvas" id="sidebar">
                         <ul class="nav">
                             <li><a href="#" data-toggle="offcanvas" class="visible-xs text-center"><i class="glyphicon glyphicon-chevron-right"></i></a></li>
                         </ul>
                         <ul class="nav hidden-xs" id="lg-menu">
                             <li class="active"><a href="index.html"><i class="glyphicon glyphicon-info-sign"></i> Inicio</a></li>
-                            <li><a href="normativa.html"><i class="glyphicon glyphicon-repeat"></i> Normativa</a></li>
-                            <li><a href="tematico.html"><i class="glyphicon glyphicon-heart"></i> Temático</a></li>
+                            <li><a href="normativa.html"><i class="glyphicon glyphicon-file"></i> Normativa</a></li>
+                            <li><a href="tematico.html"><i class="glyphicon glyphicon-th"></i> Temático</a></li>
                             <li><a href="prevalentes.html"><i class="glyphicon glyphicon-ok"></i> Prevalentes</a></li>
-                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-ok"></i> Preguntas</a></li>
-                            <li><a href="enlaces.html"><i class="glyphicon glyphicon-ok"></i> Enlaces</a></li>
+                            <li><a href="preguntas.html"><i class="glyphicon glyphicon-question-sign"></i> Preguntas</a></li>
+                            <li><a href="enlaces.html"><i class="glyphicon glyphicon-globe"></i> Enlaces</a></li>
                             <li><a href="autores.html"><i class="glyphicon glyphicon-user"></i> Autores</a></li>
                             <li><a href="about.html"><i class="glyphicon glyphicon-edit"></i> Acerca de</a></li>
                         </ul>
@@ -37,7 +37,6 @@
                             <li>
                                 <h3>
                                     <a href="" target="_blank"><img src="images/ifit-inss.png" width=170 alt="logo"></a> 
-
                                     <hr>iFit
                                 </h3> Formación y Consulta
                             </li>
@@ -45,11 +44,11 @@
                         <!-- tiny only nav-->
                         <ul class="nav visible-xs" id="xs-menu">
                             <li><a href="index.html" class="text-center"><i class="glyphicon glyphicon-info-sign"></i></a></li>
-                            <li><a href="normativa.html" class="text-center"><i class="glyphicon glyphicon-repeat"></i></a></li>
-                            <li><a href="tematico.html" class="text-center"><i class="glyphicon glyphicon-heart"></i></a></li>
+                            <li><a href="normativa.html" class="text-center"><i class="glyphicon glyphicon-file"></i></a></li>
+                            <li><a href="tematico.html" class="text-center"><i class="glyphicon glyphicon-th"></i></a></li>
                             <li><a href="prevalentes.html" class="text-center"><i class="glyphicon glyphicon-ok"></i></a></li>
-                            <li><a href="preguntas.html" class="text-center"><i class="glyphicon glyphicon-ok"></i></a></li>
-                            <li><a href="enlaces.html" class="text-center"><i class="glyphicon glyphicon-ok"></i></a></li>
+                            <li><a href="preguntas.html" class="text-center"><i class="glyphicon glyphicon-question-sign"></i></a></li>
+                            <li><a href="enlaces.html" class="text-center"><i class="glyphicon glyphicon-globe"></i></a></li>
                             <li><a href="autores.html" class="text-center"><i class="glyphicon glyphicon-user"></i></a></li>
                             <li><a href="about.html" class="text-center"><i class="glyphicon glyphicon-edit"></i></a></li>
 
@@ -57,7 +56,6 @@
                         </ul>
                     </div>
                     <!-- /sidebar -->
-
                     <!-- main right col -->
                     <div class="column col-sm-10 col-xs-11" id="main">
                         <!-- top nav -->
@@ -122,7 +120,6 @@
 
                                         <hr><a href="index.html"><i class="glyphicon glyphicon-share"></i></a> Volver al inicio
 
-                                        <hr>                                        
                                     </div>
 
                                 </div>
